bk_ida/gccida/g1/canon_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_rtx/src/alias.c:1522:35: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( x->fld[0].rtx != v6 || ( rtx)x[1] != v7 ) 
                                  ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_rtx/src/alias.c:1534:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v6, v7); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/canon_rtx/src/obj/alias.o] Error 1
